Fixes cover image width on mobile

--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,7 @@ img.project-thumbnail:hover {
 	margin: 0 1.5em;
 	border: 1px solid rgba(0,0,0,.1); 
 	border-top: none;
+	width: 100%;
 	max-height: 33.68em;
 	overflow: hidden;
 }
